# gstreamer-cuda-pipeline

./: .gitignore  CMakeLists.txt  README.md
gstreamer-cuda-pipeline/: blur-kernel.cu  blur-kernel.h  blur_kernel.cu  blur_kernel.h  callbacks.cpp  callbacks.h  globals.h  gst-cuda_pipeline.cpp  gst-cuda_pipeline.slnx  gst-cuda_pipeline.vcxproj  gst-cuda_pipeline.vcxproj.filters
src/: callbacks.cpp  gst-cuda_pipeline.cpp
